unpackaged/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Custom Object used to store Application Debug and Exception logs</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>