unpackaged/main/default/objects/Log__c/fields/Count__c.field-meta.xml
<CustomField>
        <fullName>Count__c</fullName>
        <description>If log type is exception, represents the number of occurrencies of this exception during the day</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>