unpackaged/main/default/objects/Log__c/fields/DebugLevel__c.field-meta.xml
<CustomField>
        <fullName>DebugLevel__c</fullName>
        <label>DebugLevel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>