unpackaged/main/default/objects/Log__c/fields/Limits__c.field-meta.xml
<CustomField>
        <fullName>Limits__c</fullName>
        <label>Limits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>