unpackaged/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>