unpackaged/main/default/objects/Log__c/fields/RawExceptionInformation__c.field-meta.xml
<CustomField>
        <fullName>RawExceptionInformation__c</fullName>
        <label>Raw Exception Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>