unpackaged/main/default/objects/Log__c/fields/Source__c.field-meta.xml
<CustomField>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>