unpackaged/main/default/objects/Log__c/fields/SourceMethod__c.field-meta.xml
<CustomField>
        <fullName>SourceMethod__c</fullName>
        <label>Source Method</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>