unpackaged/main/default/objects/Log__c/fields/TransactionID__c.field-meta.xml
<CustomField>
        <fullName>TransactionID__c</fullName>
        <label>Transaction Identifier</label>
        <length>32</length>
        <type>Text</type>
    </CustomField>