unpackaged/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>