unpackaged/main/default/objects/Log__c/fields/User__c.field-meta.xml
<CustomField>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Logs</relationshipName>
        <type>Lookup</type>
    </CustomField>