unpackaged/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DebugLevel__c</columns>
        <columns>Message__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>