unpackaged/main/default/objects/Log__c/listViews/Today.listView-meta.xml
<ListView>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>DebugLevel__c</columns>
        <columns>Message__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </ListView>